# pockettracker

./: .claudeignore  .descriptions.xml  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_CLEANUP_PLAN.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CREDITS.md  ClangTidy.xml  DEEPSEEK_COMMENT.md  DEVELOPMENT_SETUP.md  DEVELOPMENT_STATUS.md  DOCUMENTATION_UPDATE_LOG.txt  FEATURES.md  INPUT_COMBINATIONS.md  MANUAL_EN.md  MANUAL_RU.md  MVP_EXPANSION_PLAN.md  MVP_EXTENSION_PACK_2.md  MVP_EXTENSION_PACK_3.md  MVP_ROADMAP.md  OCUnusedGlobalDeclaration.xml  PLAN_THEME_EDITOR.md  PLAN_VIDEO_SAMPLING.md  PRODUCT_VISION.md  README.md  REFACTORING_ROADMAP.md  REFACTORING_SIMPLE_EXPLANATION.md  RELEASE_SCOPE.md  SESSION_HISTORY.md  TECHNICAL_ARCHITECTURE.md  UI_SCALING_REFACTOR_PLAN.md  build.sh  clean.sh  generic_input_system.md  gradle.properties  keystore.properties.example  m8_vs_lgpt_comparison.md  (+3 more)
.claude/: settings.json  settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
apk/: .gitignore
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  audio-decoders.cpp  audio-decoders.h  audio-defs.h  audio-engine.cpp  audio-engine.h  filter.h  jni-bridge.cpp  mod-system.h  native-audio.cpp  note-queue.h  oboe-audio-engine.cpp  oboe-audio-engine.h  rng.h  sample-editor.cpp  sampler-voice.h  soundfont-voice.cpp  soundfont-voice.h  transient-detector.cpp  tsf.h
app/src/main/cpp/effects/: filter-module.h  instrument-chain.h  master-chain.h  send-chain.h
app/src/main/cpp/effects/modules/: crush-module.h  delay-module.h  drive-module.h  dust-chain.h  eq-module.h  filter-module.h  limiter-module.h  ott-module.h  reverb-module.h
app/src/main/cpp/effects/primitives/: biquad.h  lr-crossover.h  sola-stretch.h  svf.h  upward-compressor.h
app/src/main/cpp/effects/primitives/daisysp/: compressor.h  svf.h
app/src/main/cpp/effects/soundpipe/: pareq.c
app/src/main/cpp/kissfft/: _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h
app/src/main/cpp/mods/: mod-runner.h
app/src/main/cpp/mods/modules/: adsr-module.h  ahd-module.h  lfo-module.h  pitch-slide-module.h  vibrato-module.h
app/src/main/cpp/mods/primitives/: lfo-oscillator.h
app/src/main/cpp/songcore/: event.h  schema-check.cpp
docs/: features.md  (+28 more)
linux/: .gitattributes  CMakeLists.txt  Dockerfile.portmaster  README.md  app.cpp  app.h  audio-backend.h  build-portmaster.sh  build-windows.ps1  main.cpp  sdl-audio-engine.cpp  sdl-audio-engine.h  sdl-input.cpp  sdl-input.h  sdl-video.cpp  sdl-video.h  toolchain-aarch64.cmake
linux/portmaster/: PocketTracker.sh  gameinfo.xml  port.json
linux/windows/: README.txt  make-icon.ps1  pockettracker.manifest  pockettracker.rc.in
native/: CMakeLists.txt  audio-backend.h  audio-defs.h  audio-engine.cpp  audio-engine.h  jni-bridge.cpp  native-audio.cpp  oboe-audio-engine.cpp  oboe-audio-engine.h  sample-editor.cpp  sampler-voice.h  songcore-jni.cpp  soundfont-voice.cpp
native/effects/modules/: crush-module.h  drive-module.h  dust-chain.cpp  eq-module.h  reverb-module.h
native/effects/primitives/: lr4-filter.h  sola-stretch.h  upward-compressor.h
native/effects/primitives/daisysp/: dsp.h  svf.h
native/effects/soundpipe/: pareq.h  soundpipe.h
native/kissfft/: _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h
native/mods/: mod-system.h
native/mods/modules/: pitch-slide-module.h  vibrato-module.h
native/songcore/: .gitattributes  effects.h  engine_consumer.h  engine_setup.h  event.h  host.h  model.h  note_tables.h  project_io.h  project_ops.h  render.h  rng.h  router.h  sample_edit.h  scheduler.h  sha1.h  timing.h  trace_writer.h  traversal.h  voice_derive.h  wav_writer.h
native/ui/: app_state.h  button_mapper.h  buttons.h  canvas.cpp  canvas.h  clipboard.cpp  clipboard.h  cursor.h  cursor_move.h  engine_feed.h  filesystem.h  font5x5.h  fx_helper.h  helpers.h  input_dispatcher.cpp  input_dispatcher.h  instrument_row_layout.h  layout.cpp  layout.h  lifecycle.cpp  lifecycle.h  navigation.h  platform_caps.h  project_actions.cpp  project_actions.h  screen.h  selection.h  settings_row_layout.h  settings_store.cpp  settings_store.h  std_filesystem.cpp  std_filesystem.h  theme.h  theme_io.h  touch_layout.h
native/ui/modules/: chain_editor.cpp  chain_editor.h  confirm_dialog.cpp  confirm_dialog.h  effects_editor.cpp  effects_editor.h  eq_editor.cpp  eq_editor.h  file_browser.cpp  file_browser.h  fx_helper_overlay.cpp  fx_helper_overlay.h  groove_editor.cpp  groove_editor.h  instrument_editor.cpp  instrument_editor.h  instrument_pool.cpp  instrument_pool.h  mixer.cpp  mixer.h  modulation.cpp  modulation.h  navigation_map.cpp  navigation_map.h  oscilloscope.cpp  oscilloscope.h  phrase_editor.cpp  phrase_editor.h  project_editor.cpp  project_editor.h  qwerty_keyboard.cpp  qwerty_keyboard.h  sample_editor.cpp  sample_editor.h  settings_editor.cpp  settings_editor.h  song_editor.cpp  song_editor.h  table_editor.cpp  table_editor.h  (+2 more)
shell/: .gitattributes  CMakeLists.txt  README.md  android-main.cpp  app.cpp  app.h  assets.cpp  assets.h  build-portmaster.sh  build-windows.ps1  button_feedback.h  button_glyphs.h  device_skin.h  font.cpp  font.h  font_raster.cpp  font_raster.h  image.cpp  image.h  main.cpp  portrait2.cpp  portrait2.h  sdl-input.cpp  sdl-input.h  sdl-touch.cpp  sdl-touch.h  sdl-video.cpp  sdl-video.h  skin.cpp  skin.h  toolchain-aarch64.cmake
shell/portmaster/: PocketTracker.sh  README.md
shell/windows/: make-icon.ps1  pockettracker.manifest  pockettracker.rc.in
tools/: CMakeLists.txt
tools/blocktest/: main.cpp
tools/ptdecode/: main.cpp
tools/ptdispatch/: main.cpp
tools/ptfont/: main.cpp
tools/ptinput/: README.md  main.cpp
tools/ptmapper/: main.cpp
tools/ptnondet/: README.md  main.cpp
tools/ptplay/: README.md  main.cpp
tools/ptrandom/: README.md  main.cpp
tools/ptrender/: README.md  main.cpp
tools/ptresolve/: README.md  main.cpp
tools/ptroundtrip/: README.md  main.cpp
tools/ptshot/: main.cpp
tools/pttouch/: README.md  main.cpp
tools/ptvoice/: README.md  main.cpp
(+275 files in other folders)
